--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@
         <section class="about-text">
           
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm a programmer and cybersecurity student from Illinois, and I love to code in my free time. 
+            I enjoy playing games and taking pictures, and will always take time to perfect my coding and photography skills.
           </p>
 
           <p>
