--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </p>
 
           <p>
-            My line of work revolves around crafting custom solutions to fit your needs and meet your constraints.
+            I've crafted custom solutions to fit needs and constraints, and coded random programs here and there. Reach out if you have any questions!
           </p>
         </section>
 
@@ -442,7 +442,7 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
+              <a href="https://www.holyfamilyparish.org">
                 <img src="./assets/images/hf_logo1.png" alt="client logo" style="height: 131px; width: auto;">
               </a>
             </li>
