--- a/index.html
+++ b/index.html
@@ -577,6 +577,18 @@
 
             </li>
 
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Pool Cashier</h4>
+
+              <span>2022 — 2024</span>
+
+              <p class="timeline-text">
+                Worked Part time as a Pool Cashier for the Palatine Park District over the summer.
+              </p>
+
+            </li>
+
           </ol>
 
         </section>
