--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:jhemmerle06@gmail.com" class="contact-link">jhemmerle06@gmail.com</a>
+              <a href="mailto:jphemmerle06@gmail.com" class="contact-link">jphemmerle06@gmail</a>
             </div>
 
           </li>
