--- a/pomcoin/checksum/index.html
+++ b/pomcoin/checksum/index.html
@@ -9,6 +9,10 @@
   },
   {
     "version": "1.0.2",
-    "hash": "fedcba0987654321fedcba0987654321"
+    "hash": "2a98b66796549c23f6381aabbe1a4fe2"
+  }
+  {
+    "version": "1.0.3",
+    "hash": "1234567890abcdef1234567890abcdef"
   }
 ]
