--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
               <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Work Experience</h3>
+            <h3 class="h3">Experience</h3>
           </div>
 
           <ol class="timeline-list">
@@ -555,7 +555,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Programmer</h4>
+              <h4 class="h4 timeline-item-title">Hobby Programmer</h4>
 
               <span>2018 — Present</span>
 
