--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
               <span>2024 — Present</span>
 
               <p class="timeline-text">
-                Majoring in Cybersecurity, and in the Honors program.
+                Majoring in Cybersecurity and in the Honors program with a current 3.77 GPA.
               </p>
 
             </li>
