--- a/index.html
+++ b/index.html
@@ -594,9 +594,7 @@
         </section>
 
         <p style="font-family: 'Poppins', sans-serif; font-weight: 700; color: hsl(0, 0%, 84%); font-size: 15px;">
-          DISCLAIMER: Ethics dictate that any project involving unauthorized intrusion is not and never will be open for the public to use. 
-          They are simply for educational purposes to understand the methods and practices of malware and how to prevent it. All other 
-          projects are available for view by request if they're not already on GitHub.
+          DISCLAIMER: All projects involving unauthorized intrusion are simply for educational purposes to understand the methods and practices of malware and how to prevent it.
         </p><br>
 
         <section class="timeline">
@@ -611,6 +609,32 @@
           
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Python Proxy Checker V2</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                A more advanced proxy checking system, now supporting SOCKS4 and SOCKS5. Vivid color prompt detailing different processes, customizable thread amounts, proxy list scraping, and continuous testing features.
+              </p>
+              <span>PYTHON FLASK</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Laundry Tracker</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                Simple script to track API of campus laundry machines, and display information in a graph to strategically determine the best time to wash laundry (besides 2AM)
+              </p>
+              <span>PYTHON PANDAS</span>
+
+            </li>
 
 
             <li class="timeline-item">
@@ -633,11 +657,10 @@
               <span>2024 - Present</span>
 
               <p class="timeline-text">
-                A Proof Of Concept with the goals of achieving reverse TCP shells, password grabbing, keylogging, and grabbing user info. As of current, 
-                the project is nothing more than a password stealer and info grabber. More features are soon to come. To be used in collaboration with the Python 
-                Script Obfuscator.
+                A Proof Of Concept with the goals of achieving reverse shells, password grabbing, keylogging, and grabbing user info. As of current, 
+                the project is able to obfuscate a payload allowing for data collection, RCE, and grabbing system info, all while under the cover of HTTPS encryption.
               </p>
-              <span>PYTHON</span>
+              <span>PYTHON FLASK</span>
 
             </li>
 
