Comment out resume section

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
 
@@ -540,7 +540,7 @@
 
         </section>
 
-        <section class="timeline">
+        <!-- <section class="timeline">
 
           <div class="title-wrapper">
             <div class="icon-box">
@@ -565,7 +565,7 @@
 
             </li> 
             
--->
+
 
 
             <li class="timeline-item">
@@ -606,7 +606,7 @@
 
           </ol>
 
-        </section>
+        </section> -->
 
         <p style="font-family: 'Poppins', sans-serif; font-weight: 700; color: hsl(0, 0%, 84%); font-size: 15px;">
           DISCLAIMER: All projects involving unauthorized intrusion are simply for educational purposes to understand the methods and practices of malware and how to prevent it.
