--- a/index.html
+++ b/index.html
@@ -493,10 +493,10 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
         <section class="timeline">
@@ -896,7 +896,7 @@
 
       
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="notportfolio" data-page="notportfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
