Update GPA and add project details in index.html
Updated GPA to 3.9 and added project details for Algorithm and Quant Trading Terminal.

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
               <span>2024 — Present</span>
 
               <p class="timeline-text">
-                Majoring in Cybersecurity and in the Honors program with a current 3.8 GPA.
+                Majoring in Cybersecurity and in the Honors program with a current 3.9 GPA. Member of IEEE ISU chapter and Information Technology Students of America club
               </p>
 
             </li>
@@ -624,6 +624,20 @@
           
 
           <ol class="timeline-list">
+
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Algorithm and Quant Trading Terminal</h4>
+
+              <span>2025 - Current</span>
+
+              <p class="timeline-text">
+                Usage of websockets, technical analysis, and AI sentiments to create a custom and highly detailed information terminal to suppliment trading. Includes options for backtesting.
+              </p>
+              <span>PYTHON FLASK SQL</span>
+
+            </li>
 
 
             <li class="timeline-item">
